fix button on mobile

--- a/lms/static/sass/_overrides.scss
+++ b/lms/static/sass/_overrides.scss
@@ -684,7 +684,7 @@ font-size: 1.125rem;
   padding: 9px 16px;
   font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,Noto Sans,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji !important;
 }
-@media (max-widht:767px) {
+@media (max-width:767px) {
 .uar-legacy-header .btn{
   padding: 4px 8px !important;
   font-size: 11px !important;
